# extractStringLiteralsFromCcode

./: CMakeLists.txt  README.md  parser.cpp  parser.h
.github/workflows/: Release.yml  cmake-single-platform.yml
docs/: Doxyfile.in
include/: file_io.h  parser.h
src/: CMakeLists.txt  file_io.cpp  main.cpp  parser.cpp
tests/: CMakeLists.txt  advance_tests.cpp  currentChar_tests.cpp  cursor_position_combinatorics_tests.cpp  main_func_tests.cpp  skipUntil_tests.cpp  startsWith_tests.cpp  test_utils.cpp  test_utils.h
